# meval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
meval/: __init__.py  cli.py  client.py  eval.py  judge.py  schemas.py
